# imagiro_webview

./: README.md  imagiro-webview.cpp  imagiro_webview.cpp  imagiro_webview.h
src/: BackgroundTaskRunner.h  ChocAssetsServer.h  ChocBrowserComponent.h  ChocServer.h  ConnectedProcessor.h  InspectorWindow.cpp  InspectorWindow.h  LoadListenerWrappedView.h  UltralightUtil.h  UltralightViewComponent.h  UltralightViewManager.cpp  UltralightViewManager.h  WebProcessor.cpp  WebProcessor.h  WebProcessorParameterAttachment.cpp  WebProcessorParameterAttachment.h  WebUIDebugToolbar.h  WebUIPluginEditor.h  WebViewManager.cpp  WebViewManager.h  WebviewBrowserComponent.h  WinKeypressWorkaround.h
src/AssetServer/: AssetServer.h  BinaryDataAssetServer.h
src/attachment/: AuthAttachment.h  DevicesAttachment.cpp  DevicesAttachment.h  FileIOAttachment.h  ModMatrixAttachment.h  ParameterAttachment.cpp  ParameterAttachment.h  PluginInfoAttachment.h  PresetAttachment.h  UIAttachment.h  UtilAttachment.h  WebUIAttachment.h  WebviewData.h
src/attachment/util/: BufferUtil.h  UIData.h
src/connection/: DummyUIConnection.h  SocketUIConnection.h  UIConnection.h
src/connection/web/: ChocBrowserComponent.h  WebProcessor.cpp  WebProcessor.h  WebUIConnection.cpp  WebUIConnection.h  WebUIPluginEditor.h
src/filesystems/: BinaryDataFileSystem.cpp  BinaryDataFileSystem.h  JuceFileSystem.cpp  JuceFileSystem.h
tests/: CMakeLists.txt  PresetAttachmentTests.cpp  TestUtils.h
